# osrs-xp-calc

./: .gitignore  CMakeLists.txt  README.md  firemaking.cpp  firemaking.hpp  main.cpp  mining.cpp  mining.hpp  woodcutting.cpp  woodcutting.hpp
include/skills/: attack.hpp  combat.hpp  prayer.hpp
src/: main.cpp
src/skills/: attack.cpp  combat.cpp  firemaking.cpp  mining.cpp  prayer.cpp  woodcutting.cpp
